<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_weight="4"
                android:src="@drawable/ic_login"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_margin="?actionBarSize"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="#fff"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtUsername"
                android:inputType="text"
                android:hint="@string/login_username"
                android:autofillHints="@string/login_username"
                android:textColor="#fff"
                android:textColorHint="#eee"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/rounded_corner"
                android:textSize="17sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <EditText
                android:id="@+id/edtPassword"
                android:hint="@string/login_password"
                android:textColor="#fff"
                android:textColorHint="#eee"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:autofillHints="@string/login_password"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/rounded_corner"
                android:textSize="17sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/btnLogin"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/rounded_corner_button"
                android:text="@string/login_button"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginBottom="10dp"
                android:text="@string/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <include
            android:id="@+id/llProgressBar"
            android:visibility="gone"
            layout="@layout/progress_bar_text"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>